# CI

./: .flake8  .gitignore  Nombre  README.md  RESPUESTAS.md  act_local_run.txt  act_local_run2.txt  act_local_run3.txt  act_local_run4.txt  act_success.txt  act_success_final.txt  act_success_run.txt  app.py  pyproject.toml  requirements.txt  test_app.py  tr.txt
.github/workflows/: ci-quality.yml
capturas/: fail_run.txt  success_run.txt
logs/: ci_run_success.txt
tests/: test_ci_fail.py
