[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "ci_calculadora"
version = "0.1.0"
description = "Calculadora simple para el parcial de CI"
authors = [ { name = "Heroplay-GT" } ]
dependencies = []

[tool.setuptools]
py_modules = ["app"]
